added stripment
